<resources>
    <string name="app_name">Kitchen Helper</string>
    <string name="addSteps">Add Steps</string>
    <string name="description">Description:</string>
    <string name="title">Title:</string>
    <string name="finished">Finished!</string>
    <string name="delete_step">Delete Step</string>
    <string name="start_timer">Start Timer</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="add_timer">Add Timer?</string>
    <string name="add_step">Add Step</string>
    <string name="current_favorite">Make Current Recipe Favorite</string>
</resources>