<?xml version="1.0" encoding="utf-8"?>

<!--ScrollView to fit all Steps-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <!--All Views placed into LinearLayout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <!--Horizontal Linear Layout to contain the steps button-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <!--Takes us to other activity to add steps-->
        <Button
            android:id="@+id/addSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/addSteps"
            android:onClick="goToAddStep"/>
    </LinearLayout>

        <!--Here, we add two TextViews, a Button, and a Checkbox. We change
            their visibilty when another step is added-->

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:barrierDirection="top" />

        <TextView
            android:id="@+id/stepTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/stepDescription1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16dp"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:onClick="del1"
            android:text="@string/delete_step"
            android:visibility="invisible" />

        <Space
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finished"
            android:visibility="invisible" />
    </LinearLayout>

        <!--We simply keep repeating the pattern, and do so 10 times.-->

    <TextView
        android:id="@+id/stepTitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stepDescription2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16dp"/>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/red"
            android:onClick="del2"
            android:text="@string/delete_step"
            android:visibility="invisible" />

        <Space
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finished"
            android:visibility="invisible" />
    </LinearLayout>
        <TextView
            android:id="@+id/stepTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del3"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del4"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>
        <TextView
            android:id="@+id/stepTitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del5"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del6"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del7"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del8"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del9"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/stepTitle10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stepDescription10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:onClick="del10"
                android:text="@string/delete_step"
                android:visibility="invisible" />

            <Space
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finished"
                android:visibility="invisible" />
        </LinearLayout>
</LinearLayout>
</ScrollView>